# handler/addgood.go
@@ -1,9 +1,9 @@
 package handler
 
 import (
-	"fmt"
 	"miniproject/model/mysql"
 	"miniproject/model/tables"
+	easy "miniproject/pkg/easygo"
 	"miniproject/pkg/response"
 	"miniproject/pkg/upload"
 	"strconv"
@@ -23,6 +23,10 @@ type Tmp struct {
 //@Tags New goods
 //@Accept multipart/form-data
 //@Produce application/json
+//@Param title formData string true "标题"
+//@Param zone formData string true "分区"
+//@Param price formData integer true "价格"
+//@Param summary formData string true "详情"
 //@Param avatar formData file true "商品图二进制文件"
 //@Param way formData file true "联系方式二进制文件"
 //@Success 200 {string} json{"msg":"upload successfully"}
@@ -30,35 +34,41 @@ type Tmp struct {
 //@Router /money/goods/addition [post]
 func Addgood(c *gin.Context) {
 	//新增一个商品,goodsid不需要去获取，设置了自增就可以，只要管其他的字段
-	var good1 tables.Good
-	var good2 tables.Good
-	var tmp Tmp
-	var msga string
-	var msgw string
+	var (
+		good1 tables.Good
+		good2 tables.Good
+		msga  string
+		msgw  string
+	)
+
 	id, exists := c.Get("id")
 	stuid, ok := id.(string)
 	if !exists || !ok {
 		response.SendResponse(c, "error happened", 500)
 		return
 	}
-	//sql := `SELECT max(goodsid) FROM goods`
+
 	err1 := mysql.DB.Model(&tables.Good{}).Last(&good1).Error
-	err2 := c.ShouldBindJSON(&tmp)
-	if err1 != nil || err2 != nil {
+	summary := c.PostForm("title")
+	zone := c.PostForm("zone")
+	price := c.PostForm("price")
+	title := c.PostForm("title")
+
+	tmp := easy.STI(price)
+	if tmp == -1 || err1 != nil {
 		response.SendResponse(c, "error happened", 500)
 		return
-
 	}
-	fmt.Println(good1)
+
 	good2.ID = stuid
 	//获取到当前的最大值之后再加一即可
 	good2.GoodsID = good1.GoodsID + 1
+
 	//存放图片到本地
 	oka := upload.UploadA(c, good2.GoodsID)
 	if !oka {
 		msga = "the avatar failed to upload!"
 	}
-	//good2.Avatar = wayA
 
 	//存放图片到本地
 	okw := upload.UploadW(c, good2.GoodsID)
@@ -67,18 +77,20 @@ func Addgood(c *gin.Context) {
 	}
 	//good2.Way = wayW
 
-	good2.Price = tmp.Price
-	good2.Goodszone = tmp.Zone
-	if tmp.Summary == "" {
+	good2.Price = tmp
+	good2.Goodszone = zone
+	if summary == "" {
 		good2.Summary = "该商品暂无其他描述"
 	} else {
-		good2.Summary = tmp.Summary
+		good2.Summary = summary
 	}
 
-	good2.Title = tmp.Title
+	good2.Title = title
+
 	//直接存url
 	good2.Avatar = "localhost:8080/images/avatar/" + strconv.Itoa(good2.GoodsID) + ".jpg"
 	good2.Way = "localhost:8080/images/way/" + strconv.Itoa(good2.GoodsID) + ".jpg"
+	good2.Goodsin = "yes"
 
 	mysql.DB.Model(&tables.Good{}).Create(&good2)
 
